--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/si
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: mydearmachina@gmail.com
+  facebook: yetcetera
   flickr:
   github: barryclark/jekyll-now
-  instagram:
+  instagram: yetcetera
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "https://yasemin-etc.github.io/mimachina"
 
 #
 # !! You don't need to change any of the configuration flags below !!
