--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar: https://raw.githubusercontent.com/yasemin-etc/mimachina/master/images/si
 footer-links:
   dribbble:
   email: mydearmachina@gmail.com
-  facebook: yetcetera
+  facebook:
   flickr:
   github: barryclark/jekyll-now
-  instagram: yetcetera
+  instagram: mi_machina
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
